--- a/countup.html
+++ b/countup.html
@@ -16,7 +16,7 @@
             <table><div id="scorecheck" class="scoreclass">Score:</div></table>
         </div>
         <div class="dartboard-container flex-item">
-            <img class="d-block mx-auto" src="/img/dartsbord.png" alt="Dartboard" id="dartboard">
+            <img class="d-block mx-auto" src="./img/dartsbord.png" alt="Dartboard" id="dartboard">
         </div>
         <div class="flex-item"></div>
     </div>
