--- a/cricket.html
+++ b/cricket.html
@@ -16,7 +16,7 @@
 		<div id="scorecheck" class="scoreclass">Score:</div>
 	</div>
     <div class="dartboard-container flex-item">
-        <img class="d-block mx-auto" src="/img/dartsbord.png" alt="Dartboard" id="dartboard">
+        <img class="d-block mx-auto" src="./img/dartsbord.png" alt="Dartboard" id="dartboard">
     </div>
 	<div id="cricket-table" class="flex-item"></div>
 	</div>
